@@ -1,5 +1,6 @@
 1.1.9 release
 
+	* save both file and piece priorities in resume file
 	* added missing stats_metric python binding
 	* uTP connections are no longer exempt from rate limits by default
 	* fix exporting files from partfile while seeding
